--- a/bday.html
+++ b/bday.html
@@ -823,10 +823,14 @@
                     <div class="letter-back">
                         <div class="letter-content">
                             <h2>Dear Xueyi Wu,</h2>
-                            <p>On this wonderful day that marks your birth, I wanted to take a moment to tell you how incredibly special you are to me.</p>
-                            <p>Your smile has the power to brighten even the cloudiest of days, your laughter is the most beautiful melody, and your presence in my life is a gift I thank the universe for every single day.</p>
-                            <p>You deserve all the happiness, love, and wonderful experiences that life has to offer. I hope this birthday brings you everything you've been dreaming of and more.</p>
-                            <p>Thank you for being the amazing, kind, and beautiful person you are. May this year be filled with joy, adventure, and beautiful memories that will last a lifetime.</p>
+                            <p>Today’s your day, and I just want to say thank you for being you and for letting me be part of your life again, even after everything. I know I disappeared before, twice actually, and I can only imagine how that felt. I can’t take it back, but not talking or being with you is something I’ve regretted every single time.</p>
+                            <p>I’ve missed being there for your birthdays and all the little moments that make you, you. From now on, I really want to be around, not just for special days but every day. I don’t want to lose another chance with you.</p>
+                            <p>You have this energy that can brighten even my darkest days. Your laughter, your silliness, and your voice have always had a way of bringing me peace. Your presence in my life is something I took for granted before, and I won’t make that mistake again. They say third time’s the charm, right?</p>
+                            <p>I don’t just want to keep making memories with you through screens. I want to make real memories with you in person, to laugh with you, cook together( you watch me cook ur not cooking ur blak soup), go on little adventures, or just spend time with you doing simple things. I want to bedrot with you, with you being able to watch me play while you’re lying next to me, or just doing silly stuff together. I promise that next year, no matter what, I’ll come see you and I'll make sure to make it happen.</p>
+                            <P>You deserve all the happiness, love, and good things life has to offer, even on the days you’re just bedrotting or watching me play games while we text. Honestly, I wouldn’t trade those simple moments for anything.</P>
+                            <p>Talking to you always feels easy. You make things lighter, better, and real. I look forward to every conversation, every random joke, and every chat that always makes my day better.</p>
+                            <p>I know this letter might not be a lot, and I’m far away, probably a whole clock behind you or something, but I mean every word. We might be far right now, and who knows when I’ll be able to stand next to you every day, but I can’t wait for the day when I can cook for you, see you, and just do silly, cute things together every single day.</p>
+                            <p>Thank you for being amazing, for being funny, kind, and just you. You’ve always been someone special to me, and this time, I don’t plan on disappearing again.</p>
                             <div class="signature">
                                 <p>With all my love,</p>
                                 <p>Jack Fang</p>
