--- a/bday.html
+++ b/bday.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'Poppins', 'Comic Neue', cursive;
+            font-family: 'sans-serif', Arial, sans-serif;
         }
 
         html {
