Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday!</title>
+    <title>A little something for you!</title>
     <style>
         * {
             margin: 0;
@@ -1031,3 +1031,4 @@ function initializeMainContent() {
 </script>
 </body>
 </html>
+
